# osiris

./: .gitignore  README  README.md
osiris/: .cproject  .gitignore  .project  BuildLibxml2.bat  BuildLibxslt.bat  ChangeVersion.txt  Makefile-cl.am  Makefile.am  Makefile.am.mac  README  README-cl.txt  TestAnalysis.sln  Windows-Build.txt  build-osiris-mac-cl.sh  build-osiris-mac-osx-debug.sh  build-osiris-mac-osx.sh  build-osiris-nix-cl.sh  check_debug.sh  check_source.sh  config-wx2.8-mac.sh  configure-cl.ac  configure.ac  cpmac  findwx  fix.sh  mac-installation.txt  msw-installation.txt  osiris.m4  osirisAll.sln  osiriscl.m4  osirisnix.m4  osname  tmake-cl.sh  tmake.sh  versionUpdate.txt
osiris/BaseClassLib/: .cproject  .project  ByteOrder.cpp  ByteOrder.h  DoubleArray.h  Exception.cpp  Exception.h  KeyAssignments.txt  ListFunctions.cpp  ListFunctions.h  Malloc.h  RGLogBook.cpp  RGLogBook.h  RGTextOutput.cpp  RGTextOutput.h  RGmemCheck.h  flexBison.bat  lex.yy.c  ltoa.cpp  rgclient.cpp  rgclient.h  rgcommdefs.h  rgcommlist.h  rgdefs.h  rgdirdefs.h  rgdirectory.cpp  rgdirectory.h  rgdlist.cpp  rgdlist.h  rgexec.cpp  rgexec.h  rgfile.cpp  rgfile.h  rghashtable.cpp  rghashtable.h  rgidwrapper.cpp  rgidwrapper.h  rgindexedlabel.cpp  rgindexedlabel.h  rgintarray.cpp  (+42 more)
osiris/BuildStandardControlFile/: BuildStandardControlFile.sln  BuildStandardControlFile.vcxproj  BuildStandardControlFile.vcxproj.filters  BuildStdCtlFile.cpp  LocusData.cpp  LocusData.h
osiris/Documentation/: Adding a New Kit to Osiris.docx  Adding-Marker-Sets-to-OSIRIS.docx  Current Command Line Inputs.docx  CurrentCommandLineInputs.docx  Description of Artifact Specification.doc  FormattedLabSettingsAdditions.docx  Given a Peak is Identified as Primary Pullup.docx  HowToUseCommandLineToRunOsiirs.docx  List of Kits in Osiris V2.docx  OSIRIS Updates 18Mar2015b.docx  OsirisStandardInCommandFormat.docx  Ping Failure Message Glossary.xlsx  Ping_Failure_Message_Glossary.xlsx  RobNotesOnUSACILMeeting0317-03182015.docx  STRBaseExtendedLocusList.xlsx  StandardPositiveControlList.txt  StandardPositiveControlList.xlsx  USACIL Wish List.docx  Using the Tools Library.doc  V2.3 Change Log.docx
osiris/GenerateILSFamily/: GenerateILSFamily.cpp  GenerateILSFamily.sln  GenerateILSFamily.vcxproj  ILSInputData.cpp  ILSInputData.h
osiris/GenerateLadderFile/: Bins.cpp  Bins.h  GenerateLadderFile.cpp  GenerateLadderFile.vcxproj  GenericHid_LabSettings.xml  Generic_LabSettings.xml  Generic_StdSettings.xml  LadderInputFile.cpp  LadderInputFile.h  LadderInputFile.txt  LadderInputFileAppend.txt  LadderStructures.cpp  LadderStructures.h  LocusName.cpp  LocusName.h  NameManager.cpp  NameManager.h  Panels.cpp  Panels.h  sign.bat
osiris/GenerateSmartNotices/: GenerateSmartNotices.cpp  GenerateSmartNotices.sln  GenerateSmartNotices.vcproj  GenerateSmartNotices.vcxproj  GenerateSmartNotices.vcxproj.filters
osiris/MessageBook/: DecisionDiagramForMessages.pptx  ExportFile.xsd  Logic for Resolving Ambiguous Peaks.docx  MessageBookV3.xml  MessageSchema.xlsx  OsirisMessageBook.xml  OsirisMessageBook.xsd  OsirisMessageBook2.xml  OsirisMessageBook2.xsd  OsirisMessageBook3.1.xsd  OsirisMessageBook3.xsd  OsirisMessageBook4.0.xsd  OsirisMessageBookTest.xml  OsirisMessageBookV3.1.2.xml  OsirisMessageBookV3.1.xml  OsirisMessageBookV4.0-IL.xml  OsirisMessageBookV4.0.USACIL.xml  OsirisMessageBookV4.0.xml  OsirisMessageBookWithReampV4.0.xml  ProposedAdditionsToStateMessagesForLIMS.docx  RawInput.txt  RawMessageBook.txt  RawSmartNoticeInput.txt  SmartMessageBookAutoMap.txt  SmartMessageBookAutoMapV4.0.txt  cpmsg.bat  sm.xsl
osiris/OSstarter/: OSstarter.cpp
osiris/OpenFolder/: OpenFolder.cpp
osiris/OsirisAnalysis/: .cproject  .project  00-Notes-VerticalScrollBarFix.txt  00_Requirements.txt  CAlertViewStatus.h  CAllLoci.h  CArchiveCollection.cpp  CArchiveCollection.h  CArtifactLabels.cpp  CArtifactLabels.h  CArtifactLabelsUser.cpp  CArtifactLabelsUser.h  CButtonGraph.h  CButtonSample.h  CComboLabels.cpp  CComboLabels.h  CDialogAbout.cpp  CDialogAbout.h  CDialogAcceptAlerts.cpp  CDialogAcceptAlerts.h  CDialogAcceptAllele.cpp  CDialogAcceptAllele.h  CDialogAnalysis.cpp  CDialogAnalysis.h  CDialogApprove.cpp  CDialogApprove.h  CDialogArchiveCreate.cpp  CDialogArchiveCreate.h  CDialogArtifactLabels.cpp  CDialogArtifactLabels.h  CDialogCMF.cpp  CDialogCMF.h  CDialogCellHistory.cpp  CDialogCellHistory.h  CDialogContactUs.cpp  CDialogContactUs.h  CDialogDeleteDisabled.cpp  CDialogDeleteDisabled.h  CDialogEditAllele.cpp  CDialogEditAllele.h  (+341 more)
osiris/OsirisLib2.01/: .cproject  .project  BaseGenetics.cpp  BaseGenetics.h  BaseGeneticsSM.cpp  ChannelData.cpp  ChannelData.h  ChannelDataSM.cpp  ClearingDirectory.rtf  ControlFit.cpp  ControlFit.h  CoreBioComponent.cpp  CoreBioComponent.h  CoreBioComponentSM.cpp  DataInterval.cpp  DataInterval.h  DataSignal.cpp  DataSignal.h  DataSignalSM.cpp  DirectoryManager.cpp  DirectoryManager.h  Evaluate.cpp  Evaluate.h  ExportFile.cpp  ExportFile.h  Expression.cpp  Expression.h  ExpressionCompiler.bat  ExpressionLex.cpp  ExpressionParser.cpp  ExpressionYacc.cpp  ExpressionYacc.hpp  FailureMessages.cpp  FailureMessages.h  GaussianRandomVariable.cpp  GaussianRandomVariable.h  Genetics.cpp  Genetics.h  GeneticsSM.cpp  GenotypeSpecs.cpp  (+102 more)
osiris/OsirisMath/: OsirisMath.vcxproj  coordtrans.cpp  coordtrans.h
osiris/OsirisXML/: ArtifactLabels.xml  ArtifactLabelsSchema.xsd  CMF-2017.xsd  CmfList.xml  Common.xsd  GenericLabSettings.xml  LabSettings.xsd  LabSettingsV2.xsd  LabSettingsV2type.xsd  LabSettingsV4.xsd  LadderData.xml  LadderDatawithPowerplex16.xml  MRU.xsd  MarkerSets.xsd  MarkovProcess.xsd  MarkovProperties.xml  OsirisAnalysisReport-1.2.xsd  OsirisAnalysisReport-1.3.xsd  OsirisAnalysisReport-2.0.xsd  OsirisAnalysisReport.xsd  OsirisSTRStandardSettings.xml  ParametersAndThresholds.xsd  PeakInfo.xsl  STRAnalysisParameters.xsd  SampleGeneratedNoiseData.xml  SampleLadderData.xsl  SampleName.xsl  SamplesNeedAttn.xsl  SiteSettings.xml  SpreadSheetTemplate.xsl  SpreadSheetUtils.xsl  StandardSettings.xsd  StandardSettingsType.xsd  (+16 more)
(+1255 files in other folders)
