AC_INIT(OsirisAnalysis/mainApp.cpp)
AM_INIT_AUTOMAKE([OsirisAnalysis/bin/osirisanalysis],2.5)
AC_CONFIG_SUBDIRS(wxthings/lib wxplotctrl/lib BaseClassLib/lib OsirisLib2.01/lib OsirisMath/lib TestAnalysisDirectoryLCv2.11/bin wxXml2/lib nwxZip/lib wxXsl/lib nwx/lib OsirisAnalysis/bin OSstarter/bin fsa2xml/bin OpenFolder/bin)
AC_OUTPUT(Makefile)
