AC_INIT([OsirisAnalysis/bin/osiris], [2.16])
AC_CONFIG_SRCDIR([OsirisAnalysis/mainApp.cpp])
AM_INIT_AUTOMAKE

AC_CONFIG_SUBDIRS(wxthings/lib wxplotctrl/lib BaseClassLib/lib OsirisLib2.01/lib OsirisMath/lib TestAnalysisDirectoryLCv2.11/bin wxXml2/lib nwxZip/lib wxXsl/lib nwx/lib OsirisAnalysis/bin fsa2xml/bin OpenFolder/bin GenerateLadderFile/bin GenerateILSFamily/bin)
AC_OUTPUT(Makefile)
