noinst_LIBRARIES = librgtools.a
librgtools_a_SOURCES =  \
../Exception.cpp \
../ltoa.cpp \
../ByteOrder.cpp \
../ListFunctions.cpp \
../RGLogBook.cpp \
../RGTextOutput.cpp \
../rgdirectory.cpp \
../rgdlist.cpp \
../rgexec.cpp \
../rgfile.cpp \
../rghashtable.cpp \
../rgidwrapper.cpp \
../rgindexedlabel.cpp \
../rgintarray.cpp \
../rgnull.cpp \
../rgparray.cpp \
../rgpersist.cpp \
../rgpscalar.cpp \
../rgschema.cpp \
../rgsimplestring.cpp \
../rgstring.cpp \
../rgstringdata.cpp \
../rgtokenizer.cpp \
../rgtree.cpp \
../rgvstream.cpp \
../rgwarehouse.cpp \
../rgxmlrestrict.cpp \
../rgxmlschema.cpp 

