noinst_LIBRARIES = libosiris.a
AUTOMAKE_OPTIONS = subdir-objects
libosiris_a_SOURCES = \
../BaseGenetics.cpp \
../BaseGeneticsSM.cpp \
../ChannelData.cpp \
../ChannelDataSM.cpp \
../ControlFit.cpp \
../CoreBioComponent.cpp \
../CoreBioComponentSM.cpp \
../DataInterval.cpp \
../DataSignal.cpp \
../DataSignalSM.cpp \
../DirectoryManager.cpp \
../Evaluate.cpp \
../ExportFile.cpp \
../Expression.cpp \
../ExpressionParserUX.cpp \
../FailureMessages.cpp \
../fsa2XML.cpp \
../fsaDirEntry.cpp \
../fsaFile.cpp \
../fsaFileData.cpp \
../fsaFileInput.cpp \
../fsaPeakData.cpp \
../GaussianRandomVariable.cpp \
../Genetics.cpp \
../GeneticsSM.cpp \
../GenotypeSpecs.cpp \
../IndividualGenotype.cpp \
../LadderData.cpp \
../LeastMedianOfSquares.cpp \
../Notice.cpp \
../OsirisInputFile.cpp \
../OsirisMsg.cpp \
../OsirisPosix.cpp \
../OutputLevelManager.cpp \
../PackedDate.cpp \
../PackedTime.cpp \
../ParameterServer.cpp \
../Quadratic.cpp \
../RecursiveInnerProduct.cpp \
../SampleData.cpp \
../SingularValueDecomposition.cpp \
../SmartMessage.cpp \
../SmartMessagingObject.cpp \
../SmartNotice.cpp \
../SpecialLinearRegression.cpp \
../STRChannelData.cpp \
../STRChannelDataSM.cpp \
../STRCoreBioComponent.cpp \
../STRCoreBioComponentSM.cpp \
../STREvaluate.cpp \
../STRGenetics.cpp \
../STRGeneticsSM.cpp \
../STRLCAnalysis.cpp \
../STRLCAnalysisSM.cpp \
../STRNotices.cpp \
../STRSmartMessage.cpp \
../STRSmartNotices.cpp \
../SynonymList.cpp \
../TestCharacteristic.cpp \
../TracePrequalification.cpp \
../xmlwriter.cpp

