noinst_LIBRARIES = libnwx.a
AUTOMAKE_OPTIONS = subdir-objects
libnwx_a_SOURCES = \
../nwxTimerReceiver.cpp \
../nwxBookCtrlFocus.cpp \
../nwxButtonMenu.cpp \
../nwxDialogBitmap.cpp \
../nwxDialogLog.cpp \
../nwxDoubleValidator.cpp \
../nwxFileUtil.cpp \
../nwxGrid.cpp \
../nwxIntValidator.cpp \
../nwxKillDir.cpp \
../nwxListMRU.cpp \
../nwxLock.cpp \
../nwxLockFile.cpp \
../nwxPlotCtrl.cpp \
../nwxPlotDrawerLabel.cpp \
../nwxPlotDrawerShade.cpp \
../nwxRectSet.cpp \
../nwxShiftSizer.cpp \
../nwxStaticBitmap.cpp \
../nwxString.cpp \
../nwxSysOpt.cpp \
../nwxTabOrder.cpp \
../nwxTextCtrl.cpp \
../nwxTreebook.cpp \
../nwxXmlCMF.cpp \
../nwxXmlMRU.cpp \
../nwxXmlPersist.cpp \
../nwxXmlSizer.cpp

