noinst_LIBRARIES = libnwx.a
AUTOMAKE_OPTIONS = subdir-objects
libnwx_a_SOURCES = \
../nwxTimerReceiver.cpp \
../nwxBookCtrlFocus.cpp \
../nwxButtonMenu.cpp \
../nwxDialogBitmap.cpp \
../nwxDialogLog.cpp \
../nwxDoubleValidator.cpp \
../nwxFileUtil.cpp \
../nwxGrid.cpp \
../nwxIntValidator.cpp \
../nwxKillDir.cpp \
../nwxListMRU.cpp \
../nwxLock.cpp \
../nwxLockFile.cpp \
../nwxLog.cpp \
../nwxPlotCtrl.cpp \
../nwxPlotDrawerLabel.cpp \
../nwxPlotDrawerShade.cpp \
../nwxProcess.cpp \
../nwxRectSet.cpp \
../nwxShiftSizer.cpp \
../nwxStaticBitmap.cpp \
../nwxString.cpp \
../nwxSysOpt.cpp \
../nwxTabOrder.cpp \
../nwxTextCtrl.cpp \
../nwxTreebook.cpp \
../nwxUserInfo.cpp \
../nwxXmlCMF.cpp \
../nwxXmlCmfList.cpp \
../nwxXmlMRU.cpp \
../nwxXmlPersist.cpp  \
../nwxXmlWindowSizes.cpp

