noinst_LIBRARIES = libwxplotctrl.a
libwxplotctrl_a_SOURCES = \
../src/fourier.c \
../src/fparser.cpp \
../src/fpoptimizer.cc \
../src/lm_lsqr.cpp \
../src/plotctrl.cpp \
../src/plotcurv.cpp \
../src/plotdata.cpp \
../src/plotdraw.cpp \
../src/plotfunc.cpp \
../src/plotmark.cpp \
../src/plotprnt.cpp
